config/network-policy/allow-network-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-api
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: external-secrets-operator
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443 # Required: Kubernetes API server
  ingress:
    # Optional: expose metrics (8443 and 8080 based on user configuration)
    - from:
        - namespaceSelector:
            matchLabels:
              name: openshift-monitoring
    - ports:
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 8080
